--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+0.0.5 - Propagating OpenDLV 0.4.9 to OpenDLV.scaledcars
 0.0.4 - Propagating OpenDLV v0.4.8 to OpenDLV.scaledcars
 0.0.3 - Propagating OpenDLV 0.4.4 to OpenDLV.scaledcars
 0.0.2 - Update due to OpenDLV.core update
