--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+0.0.8 - Propagating OpenDLV v0.5.2 to OpenDLV.scaledcars
 0.0.7 - Propagating OpenDLV 0.5.1 to OpenDLV.scaledcars
 0.0.6 - Switch to new Docker build structure
 0.0.5 - Propagating OpenDLV 0.4.9 to OpenDLV.scaledcars
